--- a/login-service/build.gradle
+++ b/login-service/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.0.4'
-	id 'io.spring.dependency-management' version '1.1.0'
+    id 'java'
+    id 'org.springframework.boot' version '3.0.4'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'org.dark.eqhub'
@@ -9,14 +9,22 @@ version = '1.0.0'
 sourceCompatibility = '17'
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
+    implementation "org.springframework:spring-webflux"
+    implementation "io.projectreactor.netty:reactor-netty"
+    implementation "org.thymeleaf.extras:thymeleaf-extras-springsecurity6"
+    implementation "org.webjars:webjars-locator-core"
+    implementation "org.webjars:bootstrap:3.4.1"
+    implementation "org.webjars:jquery:3.4.1"
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
