--- a/post-service/build.gradle
+++ b/post-service/build.gradle
@@ -12,18 +12,16 @@ repositories {
 }
 
 dependencies {
-    implementation project(':common')
+    implementation project(path: ':common')
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
-    implementation 'org.springframework.security:spring-security-oauth2-jose:6.0.2'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation "org.springframework.security:spring-security-core"
     implementation 'org.projectlombok:lombok'
     implementation 'io.projectreactor:reactor-test'
-
+    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
