--- a/post-service/src/main/resources/application.yml
+++ b/post-service/src/main/resources/application.yml
@@ -1,11 +1,6 @@
 spring:
   main:
     web-application-type: reactive
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://localhost:9000
   webflux:
     base-path: '/api'
   data:
@@ -16,3 +11,9 @@ spring:
 
 server:
   port: 8085
+
+
+eqhub:
+  auth:
+    secret: __secretkey&&__secretkey%%__secretkey//__
+    exp:  3600000
