--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'eqhub'
-include('auth-server')
+include 'auth-server'
 include 'common'
 include 'post-service'
 include 'login-service'
+include 'auth-service'
 
