--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,6 +12,14 @@ repositories {
     mavenCentral()
 }
 
+//bootJar {
+//    enabled = false
+//}
+//
+//jar {
+//    enabled = true
+//}
+
 dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation "io.jsonwebtoken:jjwt-impl:0.11.5"
@@ -19,8 +27,4 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation "org.springframework.security:spring-security-core"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
 }
