--- a/login-service/build.gradle
+++ b/login-service/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation "org.webjars:webjars-locator-core"
     implementation "org.webjars:bootstrap:3.4.1"
     implementation "org.webjars:jquery:3.4.1"
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
