--- a/post-service/build.gradle
+++ b/post-service/build.gradle
@@ -7,12 +7,27 @@ plugins {
 group 'org.dark.eqhub'
 version '1.0.0'
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+
 repositories {
     mavenCentral()
 }
 
+bootJar {
+    enabled = true
+}
+
+jar {
+    enabled = true
+}
+
 dependencies {
-    implementation project(path: ':common')
+    implementation project(':common')
+    implementation project(':proto')
+    implementation 'net.devh:grpc-client-spring-boot-starter:2.14.0.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
