reactive neo4j is added to friends service

--- a/friends-service/build.gradle
+++ b/friends-service/build.gradle
@@ -27,8 +27,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'net.devh:grpc-server-spring-boot-starter:2.14.0.RELEASE'
-    implementation 'org.neo4j.springframework.data:spring-data-neo4j-rx-spring-boot-starter:1.1.1'
-
+    implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
+    implementation "org.springframework.security:spring-security-core"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
