--- a/post-service/src/main/resources/application.yml
+++ b/post-service/src/main/resources/application.yml
@@ -4,10 +4,17 @@ spring:
   webflux:
     base-path: '/api'
   data:
+    redis:
+      host: localhost
+      port: 6379
     mongodb:
       host: localhost
       port: 27017
       database: eqhub
+  cache:
+    type: redis
+
+
 
 server:
   port: 8085
