post service is separated to two project. (read-api,write api). Message relayer  is added to project.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,11 @@
 rootProject.name = 'eqhub'
 include 'auth-server'
 include 'common'
-include 'post-service'
+include ':post-service:read-api'
+include ':post-service:write-api'
 include 'login-service'
 include 'auth-service'
 include 'friends-service'
 include 'proto'
+include 'message-relayer'
 
