--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,23 @@
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.0.4'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'org.dark.eqhub'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+subprojects {
 
-repositories {
-    mavenCentral()
-}
+    group = 'com.dark.eqhub'
+    version = '1.0.0'
 
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
+    apply plugin: 'java'
+    apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'java-library'
 
-tasks.named('test') {
-    useJUnitPlatform()
+    repositories {
+        jcenter()
+    }
+
+    compileJava {
+        sourceCompatibility = 17
+        targetCompatibility = 17
+    }
+
 }
