--- a/post-service/write-api/build.gradle
+++ b/post-service/write-api/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation "org.springframework.security:spring-security-core"
+    implementation 'io.projectreactor.kafka:reactor-kafka:1.13.17'
     implementation 'org.projectlombok:lombok'
     implementation 'io.projectreactor:reactor-test'
     compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
