--- a/message-relayer/build.gradle
+++ b/message-relayer/build.gradle
@@ -3,7 +3,11 @@ plugins {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+    implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'io.projectreactor.kafka:reactor-kafka'
+    implementation project(path: ':common')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
