--- a/post-service/write-api/src/main/resources/application.yml
+++ b/post-service/write-api/src/main/resources/application.yml
@@ -6,11 +6,14 @@ spring:
   kafka:
     consumer:
       bootstrap-servers: "localhost:9092"
+      client-id: "post-service-client"
+      group-id: "post-service-group"
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       auto-offset-reset: "earliest"
       properties:
-        spring.json.value.default.type: org.dark.eqhub.postservice.writeapi.domain.model
+        spring.json.value.default.type: org.dark.eqhub.postservice.writeapi.domain.model.Outbox
+        spring.json.trusted.packages: "*"
 
   data:
     redis:
